--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "node-cron": "^3.0.3",
+    "pocketbase": "^0.25.2",
     "puppeteer": "^24.5.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
