--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "node-cron": "^3.0.3",
     "pocketbase": "^0.25.2",
     "puppeteer": "^24.5.0",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "recharts": "^2.15.1",
     "styled-components": "^6.1.16",
-    "tailwind-merge": "^3.1.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
     "winston": "^3.17.0"
@@ -36,6 +36,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/winston": "^2.4.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
